# python-cli-tool

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build.yml  pytest.yml
ansible/: README.md  ansible.cfg  inventory.yml  playbook.yml
ansible/roles/my-tool/tasks/: main.yml
ansible/roles/my-tool/templates/: config.yml
src/my_tool/: backend.py  cli.py  config_default.yaml
tests/e2e/: test_e2e.py
tests/unit/: test_backend.py  test_cli.py
